[gd_scene load_steps=27 format=2]

[ext_resource path="res://Levels/Scenes/LevelOne/L1Map.gd" type="Script" id=1]
[ext_resource path="res://UI/Scenes/UsableHUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/Scenes/LevelOne/Rooms/L1R1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/Scenes/LevelOne/Rooms/L1R1Bathroom.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/Scenes/LevelOne/Rooms/L1Hallway.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/Scripts/L1Hallway.gd" type="Script" id=6]
[ext_resource path="res://Levels/Scenes/LevelOne/Rooms/L1RoomA.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/Scripts/L1RoomA.gd" type="Script" id=8]
[ext_resource path="res://Levels/Scenes/LevelOne/Rooms/L1RoomB.tscn" type="PackedScene" id=9]
[ext_resource path="res://Levels/Scripts/L1RoomB.gd" type="Script" id=10]
[ext_resource path="res://Levels/Scenes/LevelOne/Rooms/L1RoomC.tscn" type="PackedScene" id=11]
[ext_resource path="res://Levels/Scripts/L1RoomC.gd" type="Script" id=12]
[ext_resource path="res://Levels/Scenes/LevelOne/Rooms/L1RoomD.tscn" type="PackedScene" id=13]
[ext_resource path="res://Levels/Scripts/L1RoomD.gd" type="Script" id=14]
[ext_resource path="res://Levels/Scenes/LevelOne/Rooms/L1BossRoom.tscn" type="PackedScene" id=15]
[ext_resource path="res://Player/Scenes/Player.tscn" type="PackedScene" id=16]
[ext_resource path="res://Player/Scripts/Player.gd" type="Script" id=17]
[ext_resource path="res://UI/Scenes/Camera2D.tscn" type="PackedScene" id=18]
[ext_resource path="res://UI/Script/Camera2D.gd" type="Script" id=19]
[ext_resource path="res://UI/Scenes/DialogueBox.tscn" type="PackedScene" id=20]
[ext_resource path="res://UI/Images/dialogueBox.png" type="Texture" id=21]
[ext_resource path="res://Fonts/titleFontW.tres" type="DynamicFont" id=22]
[ext_resource path="res://PopupMenu.tscn" type="PackedScene" id=23]
[ext_resource path="res://PopupMenu.gd" type="Script" id=24]
[ext_resource path="res://Assets/Scenes/Door.tscn" type="PackedScene" id=25]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 11.5055, 16.4894 )

[node name="@L1Map@4" type="Node2D" index="8"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="UsableHUD" type="CanvasLayer" parent="." index="0" instance=ExtResource( 2 )]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="L1R1" type="Node2D" parent="." index="1" instance=ExtResource( 3 )]

_sections_unfolded = [ "Transform", "Visibility" ]

[node name="L1R1Bathroom" type="Node2D" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( 0.663147, 0.396301 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="L1Hallway" type="Node2D" parent="." index="3" instance=ExtResource( 5 )]

position = Vector2( 0, 1.07718 )
script = ExtResource( 6 )

[node name="L1RoomA" type="Node2D" parent="." index="4" instance=ExtResource( 7 )]

editor/display_folded = true
visible = false
position = Vector2( 720, -432 )
script = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="RoomAreaA" type="Area2D" parent="L1RoomA" index="1"]

editor/display_folded = true
position = Vector2( -0.903007, 0 )
scale = Vector2( 0.971781, 1 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="L1RoomA/RoomAreaA" index="0"]

position = Vector2( 200.051, 249.799 )
scale = Vector2( 14.4656, 11.2174 )
shape = SubResource( 1 )

[node name="L1RoomB" type="Node2D" parent="." index="5" instance=ExtResource( 9 )]

editor/display_folded = true
visible = false
position = Vector2( 720, -432 )
script = ExtResource( 10 )
_sections_unfolded = [ "Transform" ]

[node name="RoomAreaB" type="Area2D" parent="L1RoomB" index="1"]

position = Vector2( 297.32, 0 )
scale = Vector2( 1.0725, 1 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="L1RoomB/RoomAreaB" index="0"]

position = Vector2( 214.038, 249.799 )
scale = Vector2( 13.5013, 11.2174 )
shape = SubResource( 1 )

[node name="L1RoomC" type="Node2D" parent="." index="6" instance=ExtResource( 11 )]

editor/display_folded = true
visible = false
position = Vector2( 720, 432 )
script = ExtResource( 12 )
_sections_unfolded = [ "Transform" ]

[node name="RoomAreaC" type="Area2D" parent="L1RoomC" index="1"]

editor/display_folded = true
position = Vector2( 0, -864 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="L1RoomC/RoomAreaC" index="0"]

position = Vector2( 201.163, 1070.61 )
scale = Vector2( 14.4656, 12.2578 )
shape = SubResource( 1 )

[node name="L1RoomD" type="Node2D" parent="." index="7" instance=ExtResource( 13 )]

editor/display_folded = true
visible = false
position = Vector2( 720, 432 )
script = ExtResource( 14 )
_sections_unfolded = [ "Transform" ]

[node name="RoomAreaD" type="Area2D" parent="L1RoomD" index="1"]

editor/display_folded = true
position = Vector2( 0, -864 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="L1RoomD/RoomAreaD" index="0"]

position = Vector2( 545.416, 1070.39 )
scale = Vector2( 12.9592, 12.1725 )
shape = SubResource( 1 )

[node name="L1BossRoom" type="Node2D" parent="." index="8" instance=ExtResource( 15 )]

[node name="Player" type="KinematicBody2D" parent="." index="9" groups=[
"persistent",
] instance=ExtResource( 16 )]

editor/display_folded = true

position = Vector2( 684.664, 332.86 )

input_pickable = false
collision_layer = 1
collision_mask = 6
collision/safe_margin = 0.08
script = ExtResource( 17 )
_sections_unfolded = [ "Collision", "Pause", "collision" ]

[node name="Camera2D" type="Camera2D" parent="." index="10" instance=ExtResource( 18 )]

editor/display_folded = true
anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 19 )

[node name="NinePatchRect" type="NinePatchRect" parent="Camera2D" index="1" instance=ExtResource( 20 )]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 349.0
margin_right = 719.0
margin_bottom = 432.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 21 )
patch_margin_left = 17
patch_margin_top = 5
patch_margin_right = 17
patch_margin_bottom = 5
_sections_unfolded = [ "Patch Margin", "Rect" ]
__meta__ = {
"_edit_group_": true
}

[node name="text" type="RichTextLabel" parent="Camera2D/NinePatchRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 14.0
margin_top = 10.0
margin_right = 706.0
margin_bottom = 53.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 22 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 2
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Pause", "custom_fonts" ]

[node name="PopupMenu" type="PopupMenu" parent="Camera2D" index="2" instance=ExtResource( 23 )]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 574.0
margin_top = -113.0
margin_right = 826.0
margin_bottom = 112.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
items = [  ]
hide_on_state_item_selection = false
script = ExtResource( 24 )
_sections_unfolded = [ "Rect" ]


[node name="Door" type="Area2D" parent="." index="11" instance=ExtResource( 25 )]

position = Vector2( 711, 360 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform" ]

[connection signal="body_entered" from="L1RoomA/RoomAreaA" to="L1RoomA" method="_on_RoomAreaA_body_entered"]

[connection signal="body_exited" from="L1RoomA/RoomAreaA" to="L1RoomA" method="_on_RoomAreaA_body_exited"]

[connection signal="body_entered" from="L1RoomB/RoomAreaB" to="L1RoomB" method="_on_RoomAreaB_body_entered"]

[connection signal="body_exited" from="L1RoomB/RoomAreaB" to="L1RoomB" method="_on_RoomAreaB_body_exited"]

[connection signal="body_entered" from="L1RoomC/RoomAreaC" to="L1RoomC" method="_on_RoomAreaC_body_entered"]

[connection signal="body_exited" from="L1RoomC/RoomAreaC" to="L1RoomC" method="_on_RoomAreaC_body_exited"]

[connection signal="body_entered" from="L1RoomD/RoomAreaD" to="L1RoomD" method="_on_RoomAreaD_body_entered"]

[connection signal="body_exited" from="L1RoomD/RoomAreaD" to="L1RoomD" method="_on_RoomAreaD_body_exited"]

[connection signal="body_entered" from="Door" to="Player" method="_on_Door_body_entered"]


[editable path="Camera2D/NinePatchRect"]
